force-app/main/default/objects/Config_Object_1__c/Config_Object_1__c.object-meta.xml
<CustomObject>
    <description>This is a Configuration Object used for testing Cross-Org Data Analyzer.</description>
    <label>Config Object-1</label>
    <nameField>
        <label>Config Object-1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Config Objects-1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>