force-app/main/default/objects/Config_Object_1__c/fields/Config_Field_1_1__c.field-meta.xml
<CustomField>
    <fullName>Config_Field_1_1__c</fullName>
    <label>Config Field 1.1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>