force-app/main/default/objects/Config_Object_1__c/fields/Config_Field_1_2__c.field-meta.xml
<CustomField>
    <fullName>Config_Field_1_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Config Field 1.2</label>
    <type>Checkbox</type>
</CustomField>