force-app/main/default/objects/Config_Object_1__c/fields/Config_Field_1_3__c.field-meta.xml
<CustomField>
    <fullName>Config_Field_1_3__c</fullName>
    <label>Config Field 1.3</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>