force-app/main/default/objects/Config_Object_1__c/fields/Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Key__c</fullName>
    <description>Unique identifier used to locate the record across different Salesforce environments.</description>
    <externalId>true</externalId>
    <label>Lookup Key</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>